parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_comandos
Rule 2     lista_comandos -> lista_comandos comando
Rule 3     lista_comandos -> comando
Rule 4     comando -> atribuicao
Rule 5     comando -> condicional
Rule 6     comando -> repeticao
Rule 7     comando -> impressao
Rule 8     atribuicao -> ID ATRIBUICAO expressao PONTOVIRGULA
Rule 9     impressao -> IMPRIMA LPAREN expressao RPAREN PONTOVIRGULA
Rule 10    repeticao -> ENQUANTO LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE
Rule 11    condicional -> SE LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE
Rule 12    condicional -> SE LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE SENAO LCHAVE lista_comandos RCHAVE
Rule 13    condicao -> expressao IGUAL expressao
Rule 14    condicao -> expressao DIFERENTE expressao
Rule 15    condicao -> expressao MENOR expressao
Rule 16    condicao -> expressao MAIOR expressao
Rule 17    condicao -> expressao MENOR_IGUAL expressao
Rule 18    condicao -> expressao MAIOR_IGUAL expressao
Rule 19    expressao -> expressao SOMA expressao
Rule 20    expressao -> expressao SUB expressao
Rule 21    expressao -> expressao MULT expressao
Rule 22    expressao -> expressao DIV expressao
Rule 23    expressao -> LPAREN expressao RPAREN
Rule 24    expressao -> NUMERO
Rule 25    expressao -> ID

Terminals, with rules where they appear

ATRIBUICAO           : 8
DIFERENTE            : 14
DIV                  : 22
ENQUANTO             : 10
ID                   : 8 25
IGUAL                : 13
IMPRIMA              : 9
LCHAVE               : 10 11 12 12
LPAREN               : 9 10 11 12 23
MAIOR                : 16
MAIOR_IGUAL          : 18
MENOR                : 15
MENOR_IGUAL          : 17
MULT                 : 21
NUMERO               : 24
PONTOVIRGULA         : 8 9
RCHAVE               : 10 11 12 12
RPAREN               : 9 10 11 12 23
SE                   : 11 12
SENAO                : 12
SOMA                 : 19
SUB                  : 20
error                : 

Nonterminals, with rules where they appear

atribuicao           : 4
comando              : 2 3
condicao             : 10 11 12
condicional          : 5
expressao            : 8 9 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23
impressao            : 7
lista_comandos       : 1 2 10 11 12 12
programa             : 0
repeticao            : 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_comandos
    (2) lista_comandos -> . lista_comandos comando
    (3) lista_comandos -> . comando
    (4) comando -> . atribuicao
    (5) comando -> . condicional
    (6) comando -> . repeticao
    (7) comando -> . impressao
    (8) atribuicao -> . ID ATRIBUICAO expressao PONTOVIRGULA
    (11) condicional -> . SE LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE
    (12) condicional -> . SE LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE SENAO LCHAVE lista_comandos RCHAVE
    (10) repeticao -> . ENQUANTO LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE
    (9) impressao -> . IMPRIMA LPAREN expressao RPAREN PONTOVIRGULA

    ID              shift and go to state 8
    SE              shift and go to state 9
    ENQUANTO        shift and go to state 10
    IMPRIMA         shift and go to state 11

    programa                       shift and go to state 1
    lista_comandos                 shift and go to state 2
    comando                        shift and go to state 3
    atribuicao                     shift and go to state 4
    condicional                    shift and go to state 5
    repeticao                      shift and go to state 6
    impressao                      shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_comandos .
    (2) lista_comandos -> lista_comandos . comando
    (4) comando -> . atribuicao
    (5) comando -> . condicional
    (6) comando -> . repeticao
    (7) comando -> . impressao
    (8) atribuicao -> . ID ATRIBUICAO expressao PONTOVIRGULA
    (11) condicional -> . SE LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE
    (12) condicional -> . SE LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE SENAO LCHAVE lista_comandos RCHAVE
    (10) repeticao -> . ENQUANTO LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE
    (9) impressao -> . IMPRIMA LPAREN expressao RPAREN PONTOVIRGULA

    $end            reduce using rule 1 (programa -> lista_comandos .)
    ID              shift and go to state 8
    SE              shift and go to state 9
    ENQUANTO        shift and go to state 10
    IMPRIMA         shift and go to state 11

    comando                        shift and go to state 12
    atribuicao                     shift and go to state 4
    condicional                    shift and go to state 5
    repeticao                      shift and go to state 6
    impressao                      shift and go to state 7

state 3

    (3) lista_comandos -> comando .

    ID              reduce using rule 3 (lista_comandos -> comando .)
    SE              reduce using rule 3 (lista_comandos -> comando .)
    ENQUANTO        reduce using rule 3 (lista_comandos -> comando .)
    IMPRIMA         reduce using rule 3 (lista_comandos -> comando .)
    $end            reduce using rule 3 (lista_comandos -> comando .)
    RCHAVE          reduce using rule 3 (lista_comandos -> comando .)


state 4

    (4) comando -> atribuicao .

    ID              reduce using rule 4 (comando -> atribuicao .)
    SE              reduce using rule 4 (comando -> atribuicao .)
    ENQUANTO        reduce using rule 4 (comando -> atribuicao .)
    IMPRIMA         reduce using rule 4 (comando -> atribuicao .)
    $end            reduce using rule 4 (comando -> atribuicao .)
    RCHAVE          reduce using rule 4 (comando -> atribuicao .)


state 5

    (5) comando -> condicional .

    ID              reduce using rule 5 (comando -> condicional .)
    SE              reduce using rule 5 (comando -> condicional .)
    ENQUANTO        reduce using rule 5 (comando -> condicional .)
    IMPRIMA         reduce using rule 5 (comando -> condicional .)
    $end            reduce using rule 5 (comando -> condicional .)
    RCHAVE          reduce using rule 5 (comando -> condicional .)


state 6

    (6) comando -> repeticao .

    ID              reduce using rule 6 (comando -> repeticao .)
    SE              reduce using rule 6 (comando -> repeticao .)
    ENQUANTO        reduce using rule 6 (comando -> repeticao .)
    IMPRIMA         reduce using rule 6 (comando -> repeticao .)
    $end            reduce using rule 6 (comando -> repeticao .)
    RCHAVE          reduce using rule 6 (comando -> repeticao .)


state 7

    (7) comando -> impressao .

    ID              reduce using rule 7 (comando -> impressao .)
    SE              reduce using rule 7 (comando -> impressao .)
    ENQUANTO        reduce using rule 7 (comando -> impressao .)
    IMPRIMA         reduce using rule 7 (comando -> impressao .)
    $end            reduce using rule 7 (comando -> impressao .)
    RCHAVE          reduce using rule 7 (comando -> impressao .)


state 8

    (8) atribuicao -> ID . ATRIBUICAO expressao PONTOVIRGULA

    ATRIBUICAO      shift and go to state 13


state 9

    (11) condicional -> SE . LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE
    (12) condicional -> SE . LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE SENAO LCHAVE lista_comandos RCHAVE

    LPAREN          shift and go to state 14


state 10

    (10) repeticao -> ENQUANTO . LPAREN condicao RPAREN LCHAVE lista_comandos RCHAVE

    LPAREN          shift and go to state 15


state 11

    (9) impressao -> IMPRIMA . LPAREN expressao RPAREN PONTOVIRGULA

    LPAREN          shift and go to state 16


state 12

    (2) lista_comandos -> lista_comandos comando .

    ID              reduce using rule 2 (lista_comandos -> lista_comandos comando .)
    SE              reduce using rule 2 (lista_comandos -> lista_comandos comando .)
    ENQUANTO        reduce using rule 2 (lista_comandos -> lista_comandos comando .)
    IMPRIMA         reduce using rule 2 (lista_comandos -> lista_comandos comando .)
    $end            reduce using rule 2 (lista_comandos -> lista_comandos comando .)
    RCHAVE          reduce using rule 2 (lista_comandos -> lista_comandos comando .)


state 13

    (8) atribuicao -> ID ATRIBUICAO . expressao PONTOVIRGULA
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 18

state 14

    (11) condicional -> SE LPAREN . condicao RPAREN LCHAVE lista_comandos RCHAVE
    (12) condicional -> SE LPAREN . condicao RPAREN LCHAVE lista_comandos RCHAVE SENAO LCHAVE lista_comandos RCHAVE
    (13) condicao -> . expressao IGUAL expressao
    (14) condicao -> . expressao DIFERENTE expressao
    (15) condicao -> . expressao MENOR expressao
    (16) condicao -> . expressao MAIOR expressao
    (17) condicao -> . expressao MENOR_IGUAL expressao
    (18) condicao -> . expressao MAIOR_IGUAL expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    condicao                       shift and go to state 21
    expressao                      shift and go to state 22

state 15

    (10) repeticao -> ENQUANTO LPAREN . condicao RPAREN LCHAVE lista_comandos RCHAVE
    (13) condicao -> . expressao IGUAL expressao
    (14) condicao -> . expressao DIFERENTE expressao
    (15) condicao -> . expressao MENOR expressao
    (16) condicao -> . expressao MAIOR expressao
    (17) condicao -> . expressao MENOR_IGUAL expressao
    (18) condicao -> . expressao MAIOR_IGUAL expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    condicao                       shift and go to state 23
    expressao                      shift and go to state 22

state 16

    (9) impressao -> IMPRIMA LPAREN . expressao RPAREN PONTOVIRGULA
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 24

state 17

    (25) expressao -> ID .

    PONTOVIRGULA    reduce using rule 25 (expressao -> ID .)
    SOMA            reduce using rule 25 (expressao -> ID .)
    SUB             reduce using rule 25 (expressao -> ID .)
    MULT            reduce using rule 25 (expressao -> ID .)
    DIV             reduce using rule 25 (expressao -> ID .)
    IGUAL           reduce using rule 25 (expressao -> ID .)
    DIFERENTE       reduce using rule 25 (expressao -> ID .)
    MENOR           reduce using rule 25 (expressao -> ID .)
    MAIOR           reduce using rule 25 (expressao -> ID .)
    MENOR_IGUAL     reduce using rule 25 (expressao -> ID .)
    MAIOR_IGUAL     reduce using rule 25 (expressao -> ID .)
    RPAREN          reduce using rule 25 (expressao -> ID .)


state 18

    (8) atribuicao -> ID ATRIBUICAO expressao . PONTOVIRGULA
    (19) expressao -> expressao . SOMA expressao
    (20) expressao -> expressao . SUB expressao
    (21) expressao -> expressao . MULT expressao
    (22) expressao -> expressao . DIV expressao

    PONTOVIRGULA    shift and go to state 25
    SOMA            shift and go to state 26
    SUB             shift and go to state 27
    MULT            shift and go to state 28
    DIV             shift and go to state 29


state 19

    (23) expressao -> LPAREN . expressao RPAREN
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 30

state 20

    (24) expressao -> NUMERO .

    PONTOVIRGULA    reduce using rule 24 (expressao -> NUMERO .)
    SOMA            reduce using rule 24 (expressao -> NUMERO .)
    SUB             reduce using rule 24 (expressao -> NUMERO .)
    MULT            reduce using rule 24 (expressao -> NUMERO .)
    DIV             reduce using rule 24 (expressao -> NUMERO .)
    IGUAL           reduce using rule 24 (expressao -> NUMERO .)
    DIFERENTE       reduce using rule 24 (expressao -> NUMERO .)
    MENOR           reduce using rule 24 (expressao -> NUMERO .)
    MAIOR           reduce using rule 24 (expressao -> NUMERO .)
    MENOR_IGUAL     reduce using rule 24 (expressao -> NUMERO .)
    MAIOR_IGUAL     reduce using rule 24 (expressao -> NUMERO .)
    RPAREN          reduce using rule 24 (expressao -> NUMERO .)


state 21

    (11) condicional -> SE LPAREN condicao . RPAREN LCHAVE lista_comandos RCHAVE
    (12) condicional -> SE LPAREN condicao . RPAREN LCHAVE lista_comandos RCHAVE SENAO LCHAVE lista_comandos RCHAVE

    RPAREN          shift and go to state 31


state 22

    (13) condicao -> expressao . IGUAL expressao
    (14) condicao -> expressao . DIFERENTE expressao
    (15) condicao -> expressao . MENOR expressao
    (16) condicao -> expressao . MAIOR expressao
    (17) condicao -> expressao . MENOR_IGUAL expressao
    (18) condicao -> expressao . MAIOR_IGUAL expressao
    (19) expressao -> expressao . SOMA expressao
    (20) expressao -> expressao . SUB expressao
    (21) expressao -> expressao . MULT expressao
    (22) expressao -> expressao . DIV expressao

    IGUAL           shift and go to state 32
    DIFERENTE       shift and go to state 33
    MENOR           shift and go to state 34
    MAIOR           shift and go to state 35
    MENOR_IGUAL     shift and go to state 36
    MAIOR_IGUAL     shift and go to state 37
    SOMA            shift and go to state 26
    SUB             shift and go to state 27
    MULT            shift and go to state 28
    DIV             shift and go to state 29


state 23

    (10) repeticao -> ENQUANTO LPAREN condicao . RPAREN LCHAVE lista_comandos RCHAVE

    RPAREN          shift and go to state 38


state 24

    (9) impressao -> IMPRIMA LPAREN expressao . RPAREN PONTOVIRGULA
    (19) expressao -> expressao . SOMA expressao
    (20) expressao -> expressao . SUB expressao
    (21) expressao -> expressao . MULT expressao
    (22) expressao -> expressao . DIV expressao

    RPAREN          shift and go to state 39
    SOMA            shift and go to state 26
    SUB             shift and go to state 27
    MULT            shift and go to state 28
    DIV             shift and go to state 29


state 25

    (8) atribuicao -> ID ATRIBUICAO expressao PONTOVIRGULA .

    ID              reduce using rule 8 (atribuicao -> ID ATRIBUICAO expressao PONTOVIRGULA .)
    SE              reduce using rule 8 (atribuicao -> ID ATRIBUICAO expressao PONTOVIRGULA .)
    ENQUANTO        reduce using rule 8 (atribuicao -> ID ATRIBUICAO expressao PONTOVIRGULA .)
    IMPRIMA         reduce using rule 8 (atribuicao -> ID ATRIBUICAO expressao PONTOVIRGULA .)
    $end            reduce using rule 8 (atribuicao -> ID ATRIBUICAO expressao PONTOVIRGULA .)
    RCHAVE          reduce using rule 8 (atribuicao -> ID ATRIBUICAO expressao PONTOVIRGULA .)


state 26

    (19) expressao -> expressao SOMA . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 40

state 27

    (20) expressao -> expressao SUB . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 41

state 28

    (21) expressao -> expressao MULT . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 42

state 29

    (22) expressao -> expressao DIV . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 43

state 30

    (23) expressao -> LPAREN expressao . RPAREN
    (19) expressao -> expressao . SOMA expressao
    (20) expressao -> expressao . SUB expressao
    (21) expressao -> expressao . MULT expressao
    (22) expressao -> expressao . DIV expressao

    RPAREN          shift and go to state 44
    SOMA            shift and go to state 26
    SUB             shift and go to state 27
    MULT            shift and go to state 28
    DIV             shift and go to state 29


state 31

    (11) condicional -> SE LPAREN condicao RPAREN . LCHAVE lista_comandos RCHAVE
    (12) condicional -> SE LPAREN condicao RPAREN . LCHAVE lista_comandos RCHAVE SENAO LCHAVE lista_comandos RCHAVE

    LCHAVE          shift and go to state 45


state 32

    (13) condicao -> expressao IGUAL . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 46

state 33

    (14) condicao -> expressao DIFERENTE . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 47

state 34

    (15) condicao -> expressao MENOR . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 48

state 35

    (16) condicao -> expressao MAIOR . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 49

state 36

    (17) condicao -> expressao MENOR_IGUAL . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 50

state 37

    (18) condicao -> expressao MAIOR_IGUAL . expressao
    (19) expressao -> . expressao SOMA expressao
    (20) expressao -> . expressao SUB expressao
    (21) expressao -> . expressao MULT expressao
    (22) expressao -> . expressao DIV expressao
    (23) expressao -> . LPAREN expressao RPAREN
    (24) expressao -> . NUMERO
    (25) expressao -> . ID

    LPAREN          shift and go to state 19
    NUMERO          shift and go to state 20
    ID              shift and go to state 17

    expressao                      shift and go to state 51

state 38

    (10) repeticao -> ENQUANTO LPAREN condicao RPAREN . LCHAVE lista_comandos RCHAVE

    LCHAVE          shift and go to state 52


state 39

    (9) impressao -> IMPRIMA LPAREN expressao RPAREN . PONTOVIRGULA

    PONTOVIRGULA    shift and go to state 53


state 40

    (19) expressao -> expressao SOMA expressao .
    (19) expressao -> expressao . SOMA expressao
    (20) expressao -> expressao . SUB expressao
    (21) expressao -> expressao . MULT expressao
    (22) expressao -> expressao . DIV expressao

    PONTOVIRGULA    reduce using rule 19 (expressao -> expressao SOMA expressao .)
    SOMA            reduce using rule 19 (expressao -> expressao SOMA expressao .)
    SUB             reduce using rule 19 (expressao -> expressao SOMA expressao .)
    IGUAL           reduce using rule 19 (expressao -> expressao SOMA expressao .)
    DIFERENTE       reduce using rule 19 (expressao -> expressao SOMA expressao .)
    MENOR           reduce using rule 19 (expressao -> expressao SOMA expressao .)
    MAIOR           reduce using rule 19 (expressao -> expressao SOMA expressao .)
    MENOR_IGUAL     reduce using rule 19 (expressao -> expressao SOMA expressao .)
    MAIOR_IGUAL     reduce using rule 19 (expressao -> expressao SOMA expressao .)
    RPAREN          reduce using rule 19 (expressao -> expressao SOMA expressao .)
    MULT            shift and go to state 28
    DIV             shift and go to state 29

  ! MULT            [ reduce using rule 19 (expressao -> expressao SOMA expressao .) ]
  ! DIV             [ reduce using rule 19 (expressao -> expressao SOMA expressao .) ]
  ! SOMA            [ shift and go to state 26 ]
  ! SUB             [ shift and go to state 27 ]


state 41

    (20) expressao -> expressao SUB expressao .
    (19) expressao -> expressao . SOMA expressao
    (20) expressao -> expressao . SUB expressao
    (21) expressao -> expressao . MULT expressao
    (22) expressao -> expressao . DIV expressao

    PONTOVIRGULA    reduce using rule 20 (expressao -> expressao SUB expressao .)
    SOMA            reduce using rule 20 (expressao -> expressao SUB expressao .)
    SUB             reduce using rule 20 (expressao -> expressao SUB expressao .)
    IGUAL           reduce using rule 20 (expressao -> expressao SUB expressao .)
    DIFERENTE       reduce using rule 20 (expressao -> expressao SUB expressao .)
    MENOR           reduce using rule 20 (expressao -> expressao SUB expressao .)
    MAIOR           reduce using rule 20 (expressao -> expressao SUB expressao .)
    MENOR_IGUAL     reduce using rule 20 (expressao -> expressao SUB expressao .)
    MAIOR_IGUAL     reduce using rule 20 (expressao -> expressao SUB expressao .)
    RPAREN          reduce using rule 20 (expressao -> expressao SUB expressao .)
    MULT            shift and go to state 28
    DIV             shift and go to state 29

  ! MULT            [ reduce using rule 20 (expressao -> expressao SUB expressao .) ]
  ! DIV             [ reduce using rule 20 (expressao -> expressao SUB expressao .) ]
  ! SOMA            [ shift and go to state 26 ]
  ! SUB             [ shift and go to state 27 ]


state 42

    (21) expressao -> expressao MULT expressao .
    (19) expressao -> expressao . SOMA expressao
    (20) expressao -> expressao . SUB expressao
    (21) expressao -> expressao . MULT expressao
    (22) expressao -> expressao . DIV expressao

    PONTOVIRGULA    reduce using rule 21 (expressao -> expressao MULT expressao .)
    SOMA            reduce using rule 21 (expressao -> expressao MULT expressao .)
    SUB             reduce using rule 21 (expressao -> expressao MULT expressao .)
    MULT            reduce using rule 21 (expressao -> expressao MULT expressao .)
    DIV             reduce using rule 21 (expressao -> expressao MULT expressao .)
    IGUAL           reduce using rule 21 (expressao -> expressao MULT expressao .)
    DIFERENTE       reduce using rule 21 (expressao -> expressao MULT expressao .)
    MENOR           reduce using rule 21 (expressao -> expressao MULT expressao .)
    MAIOR           reduce using rule 21 (expressao -> expressao MULT expressao .)
    MENOR_IGUAL     reduce using rule 21 (expressao -> expressao MULT expressao .)
    MAIOR_IGUAL     reduce using rule 21 (expressao -> expressao MULT expressao .)
    RPAREN          reduce using rule 21 (expressao -> expressao MULT expressao .)

  ! SOMA            [ shift and go to state 26 ]
  ! SUB             [ shift and go to state 27 ]
  ! MULT            [ shift and go to state 28 ]
  ! DIV             [ shift and go to state 29 ]


state 43

    (22) expressao -> expressao DIV expressao .
    (19) expressao -> expressao . SOMA expressao
    (20) expressao -> expressao . SUB expressao
    (21) expressao -> expressao . MULT expressao
    (22) expressao -> expressao . DIV expressao

    PONTOVIRGULA    reduce using rule 22 (expressao -> expressao DIV expressao .)
    SOMA            reduce using rule 22 (expressao -> expressao DIV expressao .)
    SUB             reduce using rule 22 (expressao -> expressao DIV expressao .)
    MULT            reduce using rule 22 (expressao -> expressao DIV expressao .)
    DIV             reduce using rule 22 (expressao -> expressao DIV expressao .)
    IGUAL           reduce using rule 22 (expressao -> expressao DIV expressao .)
    DIFERENTE       reduce using rule 22 (expressao -> expressao DIV expressao .)
    MENOR           reduce using rule 22 (expressao -> expressao DIV expressao .)
    MAIOR           reduce using rule 22 (expressao -> expressao DIV expressao .)
    MENOR_IGUAL     reduce using rule 22 (expressao -> expressao DIV expressao .)
    MAIOR_IGUAL     reduce using rule 22 (expressao -> expressao DIV expressao .)
    RPAREN          reduce using rule 22 (expressao -> expressao DIV expressao .)

  ! SOMA            [ shift and go to state 26 ]
  ! SUB             [ shift and go to state 27 ]
  ! MULT            [ shift and go to state 28 ]
  ! DIV             [ shift and go to state 29 ]

